debian.yml: Changed "when" statement syntax for the "Joining to AD Domain" task based on console output warning debian.yml: Commented out sudoers section of debian.yml within domain-join role (this is something we'll want to add back later) join-domain.yml: Added prompt for AD user and password to the main playbook for domain-join

--- a/join-domain.yml
+++ b/join-domain.yml
@@ -6,7 +6,16 @@
   become: true		    # Sudo all commands in the playbook
   hosts: all		    # Defines what computers this is being run on
   name: join domain     # Name of the playbook
-# Remote user not defined here as it is defined in ansible.cfg
+# remote_user: techs    # Not defined here as it is defined in ansible.cfg
+
+  vars_prompt:
+  - name: "ad_user"
+    prompt: "Enter Fulton AD username (jsmithad):"
+    private: no
+    
+  - name: "ad_password"
+    prompt: "Enter Fulton AD password:"
+    private: yes
 
 ############################################################################################
 # RUNNING THE PLAY                                                                         #
