--- a/ansible.cfg
+++ b/ansible.cfg
@@ -54,6 +54,11 @@
 #module_lang    = C
 #module_set_locale = False
 
+# Use the YAML callback plugin.
+stdout_callback = yaml
+# Use the stdout_callback when running ad-hoc commands.
+bin_ansible_callbacks = True
+
 # plays will gather facts by default, which contain information about
 # the remote system.
 #
