--- a/roles/join-domain/tasks/debian.yml
+++ b/roles/join-domain/tasks/debian.yml
@@ -24,7 +24,7 @@
 
 - name: debian | joining host to AD domain
   command: 'domainjoin-cli join "{{ ad_domain }}" "{{ ad_user }}" "{{ ad_password }}"'
-  when:  domain_status[0] is not defined or domain_status[0].stdout_lines|string not in ad_domain_netbios
+  when:  domain_status[0] is not defined or domain_status[0].stdout|string not in ad_domain_netbios
 
 - name: debian | setting includedir in sudoers
   lineinfile:
@@ -42,22 +42,22 @@
   with_items: "{{ domain_sudo_groups }}"
 
 - name: debian | checking UserDomainPrefix
-  shell: /opt/pbis/bin/config --show UserDomainPrefix
+  shell: /opt/pbis/bin/config --show UserDomainPrefix | grep {{ pri_domain_name }}
   register: UserDomainPrefix
   changed_when: false
 
 - name: debian | checking AssumeDefaultDomain
-  shell: /opt/pbis/bin/config --show AssumeDefaultDomain
+  shell: /opt/pbis/bin/config --show AssumeDefaultDomain | grep true
   register: AssumeDefaultDomain
   changed_when: false
 
 - name: debian | checking LoginShellTemplate
-  shell: /opt/pbis/bin/config --show LoginShellTemplate
+  shell: /opt/pbis/bin/config --show LoginShellTemplate | grep "/bin/bash"
   register: LoginShellTemplate
   changed_when: false
 
 - name: debian | checking Local_LoginShellTemplate
-  shell: /opt/pbis/bin/config --show Local_LoginShellTemplate
+  shell: /opt/pbis/bin/config --show Local_LoginShellTemplate | grep "/bin/bash"
   register: Local_LoginShellTemplate
   changed_when: false
 
@@ -78,20 +78,19 @@
 
 - name: debian | setting domain prefix
   command: '/opt/pbis/bin/config UserDomainPrefix {{ pri_domain_name }}'
-  when:  UserDomainPrefix is defined or UserDomainPrefix[0].stdout_lines|string not in pri_domain_name
+  when:  UserDomainPrefix[0] is not defined or UserDomainPrefix[0].stdout|string not in pri_domain_name
 
-    
 - name: debian | setup assume default domain
   command: '/opt/pbis/bin/config AssumeDefaultDomain true'
-  when:  AssumeDefaultDomain is defined or AssumeDefaultDomain.stdout_lines.1 != "true"
+  when:  AssumeDefaultDomain[0] is not defined or AssumeDefaultDomain[0].stdout != "true"
 
 - name: debian | setting default shell to bash
   command: '/opt/pbis/bin/config LoginShellTemplate /bin/bash'
-  when:  LoginShellTemplate is defined or LoginShellTemplate.stdout_lines.1 != "/bin/bash"
+  when:  LoginShellTemplate[0] is not defined or LoginShellTemplate[0].stdout != "/bin/bash"
 
 - name: debian | setting local default shell to bash
   command: '/opt/pbis/bin/config Local_LoginShellTemplate /bin/bash'
-  when:  Local_LoginShellTemplate is defined or Local_LoginShellTemplate.stdout_lines.1 != "/bin/bash"
+  when:  Local_LoginShellTemplate[0] is not defined or Local_LoginShellTemplate[0].stdout != "/bin/bash"
 
 # Commenting these out, as they were not used or commented out in the workstation_config.sh
 #
