ansible.cfg: Clean up the commenting more, adding detail on how to keep file clean and easy to find future edits ansible.cfg: Moved all the current edits to a standalone section (keeping with new convention)

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,7 +6,8 @@
 # of note in this file are:
 # 							- HostKeyChecking is set to 'false' [aka disabled] -- prevents us from needing every SSH key of machines we manage
 # 							- RemoteUser is set to 'techs' -- Note that is for user, not for sudo, allows us to connect using SSH keys only
-#							[] Need to enable Output Plugin like ARA
+#							- YAML'd output/callback is enabled
+#                           [] Need to enable Output Plugin like ARA
 #							[] Need to consider setting default inventory to staging or something testing related
 #
 # IMPORTANT NOTE:
@@ -24,10 +25,6 @@
 # to this config. You'll know when that is, but in general I believe that once this file is
 # set up, it should run itself without any necessary changes
 
-############################################################################################
-# Resume standard ansible.cfg below                                                        #
-############################################################################################
-
 # nearly all parameters can be overridden in ansible-playbook
 # or with command line flags. ansible will read ANSIBLE_CONFIG,
 # ansible.cfg in the current working directory, .ansible.cfg in
@@ -35,6 +32,32 @@
 # finds first
 
 [defaults]
+
+############################################################################################
+# CIDSE Options / Overrides for 'defaults'                                                 #
+############################################################################################
+# Items in this section override defaults which are shown further below but commented out
+# by default. Basically everything below this is a reference for what the default of Ansible
+# is unless we specifically override it right here. No edits are made below the "standard"
+# config resume line below this. We keep all overrides here for easy readability/editing
+# NOTE: There are other sections aside from [defaults], if changing settings in those sections
+# look for another section like this (or create it) to keep those sections clean as well
+
+# Use the YAML callback plugin (allows for nice output formatting in CLI)
+stdout_callback = yaml
+
+# Use the stdout_callback when running ad-hoc commands (also for nice formatting)
+bin_ansible_callbacks = True
+
+# Disable host ssh key checking
+host_key_checking = False
+
+# Set default remote user to techs instead of root
+remote_user = techs
+
+############################################################################################
+# Resume standard ansible.cfg defaults section below                                       #
+############################################################################################
 
 # some basic default values...
 
@@ -54,10 +77,7 @@
 #module_lang    = C
 #module_set_locale = False
 
-# Use the YAML callback plugin.
-stdout_callback = yaml
-# Use the stdout_callback when running ad-hoc commands.
-bin_ansible_callbacks = True
+
 
 # plays will gather facts by default, which contain information about
 # the remote system.
@@ -91,7 +111,7 @@ bin_ansible_callbacks = True
 #roles_path    = /etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-host_key_checking = False
+#host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
@@ -127,7 +147,7 @@ host_key_checking = False
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
-remote_user = techs
+#remote_user = root
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
