--- a/roles/join-domain/tasks/debian.yml
+++ b/roles/join-domain/tasks/debian.yml
@@ -25,6 +25,9 @@
   ignore_errors: true
   changed_when: false
 
+- name: debian | debug output of domain status check
+  debug: msg="{{ domain_status }}"
+
 - name: debian | joining host to AD domain
   command: 'domainjoin-cli join "{{ ad_domain }}" "{{ ad_user }}" "{{ ad_password }}"'
   when:  domain_status[0] is not defined or domain_status[0].stdout|string not in ad_domain_netbios
