Domain check failure ignore attempt

--- a/roles/join-domain/tasks/debian.yml
+++ b/roles/join-domain/tasks/debian.yml
@@ -23,6 +23,7 @@
   shell: /opt/pbis/bin/lsa get-status | grep Netbios | awk '{print $3}' | grep "{{ ad_domain_netbios }}"
   register: domain_status
   ignore_errors: true
+  failed_when: false
   changed_when: false
 
 - name: debian | debug output of domain status check
