--- a/roles/join-domain/tasks/debian.yml
+++ b/roles/join-domain/tasks/debian.yml
@@ -25,9 +25,12 @@
   failed_when: false
   changed_when: false
 
+- name: debian | debug domain check
+  debug: var=domain_status.stdout
+
 - name: debian | joining host to AD domain
   command: 'domainjoin-cli join "{{ ad_domain }}" "{{ ad_user }}" "{{ ad_password }}"'
-  when:  domain_status[0] is not defined or domain_status.stdout|string not in ad_domain_netbios
+  when:  domain_status[0] is not defined or domain_status.stdout not in ad_domain_netbios
 
 - name: debian | setting includedir in sudoers
   lineinfile:
