--- a/roles/common/tasks/debian.yml
+++ b/roles/common/tasks/debian.yml
@@ -48,7 +48,12 @@
  apt_key: 
    state: present
    url: "https://download.sublimetext.com/sublimehq-pub.gpg"
- name: debian | install GPG key for Sublime Text
+ name: debian | install key for sublime-text
+- 
+ apt_key: 
+   state: present
+   url: "https://dl-ssl.google.com/linux/linux_signing_key.pub"
+ name: debian | install key for google-chrome
 - 
  apt_repository:
    repo: deb {{ item.repo }} {{ item.add }}
@@ -78,7 +83,7 @@
 ##########################################################################
 -
   apt:
-    state: installed
+    state: present
     pkg: "{{ item }}"
     update_cache: yes
   with_items:
