--- a/roles/landscape/tasks/debian.yml
+++ b/roles/landscape/tasks/debian.yml
@@ -8,10 +8,10 @@
 ##########################################################################
 
 - shell: grep {{ landscape_url }} /etc/landscape/client.conf
-    register: landscape_check
-    ignore_errors: true
-    failed_when: false
-    changed_when: false
+  register: landscape_check
+  ignore_errors: true
+  failed_when: false
+  changed_when: false
   name: debian | check landscape client.conf for current status
   
 - debug:
@@ -50,8 +50,8 @@
   name: debian | copy landscape SSL cert
 
 - template:
-    src: "{{ role_path }}/templates/client.conf.j2
-    dest: /etc/landscape/client.conf
+    src: "{{ role_path }}/templates/client.conf.j2"
+    dest: "/etc/landscape/client.conf"
     owner: root
     group: root
     mode: 0755
