--- a/roles/landscape/tasks/debian.yml
+++ b/roles/landscape/tasks/debian.yml
@@ -59,5 +59,5 @@
   name: debian | copy landscape client.conf
   
 - shell: landscape-config --computer-title $(hostname -f) --script-users nobody,landscape,root --silent
-  when landscape_check.rc == 1
+  when: landscape_check.rc == 1
   name: debian | run join landscape command
