Update inventory with new test machines, setup site.yml main playbook to include the other playbooks

--- a/site.yml
+++ b/site.yml
@@ -4,5 +4,12 @@
 #              MASTER PLAYBOOK                  #
 #################################################
 
+- name: cidse | common
+  include: common.yml
+  
+- name: cidse | join-domain
+  include: join-domain.yml
 
+- name: cidse | landscape
+  include: landscape.yml
 
