Added more packages to the common role, light tweaks/cleanup to common tasks, tweaks to vars/tasks in join-domain as well

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -3,11 +3,21 @@
 # DEFAULT VARIABLES FOR COMMON ROLE                                                        #
 ############################################################################################
 common_packages:
-  - sublime-text
-  - google-chrome-stable
-  - git
+  - byobu                 # Used for kernel cleanup cron job
   - cifs-utils
-  - byobu
+  - clamav-daemon
+  - clamtk
+  - git
+  - gksu
+  - google-chrome-stable
+  - grub2-splashimages
+  - openssh-server
+  - open-vm-tools
+  - pbis-open
+  - sublime-text
+
+
+
 
 common_rtpass: "$6$aMMGt4ZQuP.Q4$6PN1nHcqAUQjtDdBmPXM1o2CCJxVFl.wCbpyju5nlkBjGKZX9gokV4Sj7WA2aPU7IcIcx6GN9qqMcMxq8CdFp."
 common_fsuser: "deploy"
