--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -16,9 +16,21 @@ common_packages:
   - pbis-open
   - sublime-text
 
+common_aptkeys:
+  - https://download.sublimetext.com/sublimehq-pub.gpg
+  - https://dl-ssl.google.com/linux/linux_signing_key.pub
+  - http://repo.pbis.beyondtrust.com/apt/RPM-GPG-KEY-pbis
 
+common_repos:
+   - repo: https://download.sublimetext.com/
+     add: apt/stable/
+     file: sublime-text
+   - repo: http://dl.google.com/linux/chrome/deb/
+     add: stable main
+     file: google-chrome
+   - repo: http://repo.pbis.beyondtrust.com/apt/
+     add: pbiso main
+     file: pbiso
 
-
-common_rtpass: "$6$aMMGt4ZQuP.Q4$6PN1nHcqAUQjtDdBmPXM1o2CCJxVFl.wCbpyju5nlkBjGKZX9gokV4Sj7WA2aPU7IcIcx6GN9qqMcMxq8CdFp."
 common_fsuser: "deploy"
 common_fspass: "$6$E6FH6Lsg30j$uasCbR704g1n06T7br76L8g6dmDPrX49Rl2lXvaO3jZSn67gdmvHP5bykzsg9ugH7e1mxfW5wnHdN7Lx9Fi7z."
