--- a/roles/common/tasks/debian.yml
+++ b/roles/common/tasks/debian.yml
@@ -6,12 +6,12 @@
 ##########################################################################
 # Update root password                                                   #
 ##########################################################################
-- 
-  user: 
-    name: root
-    password: "{{ common_rtpass }}"
-    update_password: always
-  name: "debian | update root password"
+#- 
+#  user: 
+#    name: root
+#    password: "{{ common_rtpass }}"
+#    update_password: always
+#  name: "debian | update root password"
 
 ##########################################################################
 # Enable serial communication over USB for all users                     #
@@ -44,29 +44,38 @@
 ##########################################################################
 # Add apt keys and repositories                                          #
 ##########################################################################
-- 
- apt_key: 
+-
+ apt_key:
    state: present
-   url: "https://download.sublimetext.com/sublimehq-pub.gpg"
- name: debian | install key for sublime-text
-- 
- apt_key: 
-   state: present
-   url: "https://dl-ssl.google.com/linux/linux_signing_key.pub"
- name: debian | install key for google-chrome
+   url: "{{ item }}"
+ with_items:
+   - "{{ common_aptkeys }}"
+ name: debian | add common apt keys
+
+#- 
+# apt_key: 
+#   state: present
+#   url: "https://download.sublimetext.com/sublimehq-pub.gpg"
+# name: debian | install key for sublime-text
+#- 
+# apt_key: 
+#   state: present
+#   url: "https://dl-ssl.google.com/linux/linux_signing_key.pub"
+# name: debian | install key for google-chrome
 - 
  apt_repository:
    repo: deb {{ item.repo }} {{ item.add }}
    state: present
    filename: "{{ item.file }}"
  with_items:
-   - repo: https://download.sublimetext.com/
-     add: apt/stable/
-     file: sublime
-   - repo: http://dl.google.com/linux/chrome/deb/
-     add: stable main
-     file: google-chrome
- name: debian | add specified repositories into sources list
+   - "{{ common_repos }}"
+#   - repo: https://download.sublimetext.com/
+#     add: apt/stable/
+#     file: sublime
+#   - repo: http://dl.google.com/linux/chrome/deb/
+#     add: stable main
+#     file: google-chrome
+ name: debian | add common repositories
 
 ##########################################################################
 # Update and upgrade packages (apt-get update && apt-get upgrade)        #
