--- a/roles/join-domain/tasks/debian.yml
+++ b/roles/join-domain/tasks/debian.yml
@@ -45,7 +45,7 @@
 - name: debian | granting sudo rights to Domain Groups
   lineinfile:
     dest: /etc/sudoers
-    line: "%{{ ad_domain_netbios }}\\\{{ item }} ALL=(ALL:ALL) ALL"
+    line: "%{{ ad_domain_netbios }}\\\\\\{{ item }} ALL=(ALL:ALL) ALL"
     state: present
     validate: 'visudo -cf %s'
   with_items: "{{ join-domain_sudogroups }}"
