Convert from "include" to "import" due to future deprecation

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -2,8 +2,8 @@
 ############################################################################################
 # TASKS FILE FOR COMMON                                                                    #
 ############################################################################################
-- include: debian.yml
+- import_tasks: debian.yml
   when: ansible_os_family == "Debian"
 
-- include: redhat.yml
+- import_tasks: redhat.yml
   when: ansible_os_family == "RedHat"
