--- a/roles/join-domain/tasks/main.yml
+++ b/roles/join-domain/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for ansible-domain-join
-- include: debian.yml
+- import_tasks: debian.yml
   when: ansible_os_family == "Debian"
 
-- include: redhat.yml
+- import_tasks: redhat.yml
   when: ansible_os_family == "RedHat"
