--- a/roles/landscape/tasks/main.yml
+++ b/roles/landscape/tasks/main.yml
@@ -2,5 +2,5 @@
 ############################################################################################
 # TASKS FILE FOR LANDSCAPE                                                                    #
 ############################################################################################
-- include: debian.yml
+- import_tasks: debian.yml
   when: ansible_os_family == "Debian"
