Update playbook headers, add cronjob state present to common role

--- a/roles/common/tasks/debian.yml
+++ b/roles/common/tasks/debian.yml
@@ -126,4 +126,5 @@
     minute: 30
     weekday: 1
     job: "purge-old-kernels --keep 3 -qy"
+    state: present
   name: debian | purge old kernels cronjob setup
