--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,25 @@
-#################################################
-#           CIDSE ANSIBLE PLAYBOOK              #
-#################################################
-#              MASTER PLAYBOOK                  #
-#################################################
+---
+############################################################################################
+# CIDSE ANSIBLE                                                                            #
+############################################################################################
+# MASTER PLAYBOOK                                                                          #
+############################################################################################
+# INITIAL SETUP                                                                            #
+############################################################################################
+- 
+  vars_prompt:
+  - name: "ad_user"
+    prompt: "Fulton AD username"
+    private: no
+    
+  - name: "ad_password"
+    prompt: "Fulton AD password"
+    private: yes
+    confirm: yes
+
+############################################################################################
+# Combine all the defined playbooks                                                        #
+############################################################################################
 
 - name: cidse | common
   import_playbook: common.yml
