Adding specific file for cronjob

--- a/roles/common/tasks/debian.yml
+++ b/roles/common/tasks/debian.yml
@@ -127,4 +127,5 @@
     weekday: 1
     job: "purge-old-kernels --keep 3 -qy"
     state: present
+    cron_file: /etc/crontab
   name: debian | purge old kernels cronjob setup
