--- a/roles/join-domain/tasks/debian.yml
+++ b/roles/join-domain/tasks/debian.yml
@@ -13,12 +13,13 @@
 
 - name: debian | apt cache update
   apt: 
-    update_cache: yes
+    cache_valid_time: 43200
+
 
 - name: debian | install pbis-open
   apt: 
     pkg: pbis-open 
-    update_cache: yes 
+    cache_valid_time: 43200 
     state: latest
 
 - name: debian | checking the current domain status
@@ -48,7 +49,7 @@
     line: "%{{ ad_domain_netbios }}\\\\\\{{ item }} ALL=(ALL:ALL) ALL"
     state: present
     validate: 'visudo -cf %s'
-  with_items: "{{ join-domain_sudogroups }}"
+  with_items: "{{ joindomain_sudogroups }}"
 
 - name: debian | checking UserDomainPrefix
   shell: /opt/pbis/bin/config --show UserDomainPrefix | grep {{ pri_domain_name }}
