--- a/service-acct.yml
+++ b/service-acct.yml
@@ -6,7 +6,8 @@
   become: true		      # Sudo all commands in the playbook
   hosts: all    		    # Defines what computers this is being run on
   name: service-acct    # Name of the playbook
-# remote_user: techs    # Not defined here as it should be specified at playbook runtime by the user
+  remote_user: techs    # Defined here since this is a separate playbook for initial provisioning
+                        # You will still need to add the password at runtime
 
 ############################################################################################
 # RUNNING THE PLAY                                                                         #
