--- a/roles/service-acct/tasks/debian.yml
+++ b/roles/service-acct/tasks/debian.yml
@@ -15,4 +15,5 @@
    update_password: always
    home: /home/sparky
    shell: /bin/bash
+   uid: "999"
  name: "debian | provision CIDSE Ansible service account"
