Added gitignore for credential files, updated readme, changed ansible.cfg to use 'sparky' as the default SSH user now

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -52,8 +52,12 @@ bin_ansible_callbacks = True
 # Disable host ssh key checking
 host_key_checking = False
 
-# Set default remote user to techs instead of root
-remote_user = techs
+# Set default remote user to sparky (the service account) instead of root
+# We override this in the playbook to create the sparky account
+remote_user = sparky
+
+# Specifying --vault-password-file on the command line.
+vault_password_file = ./vault_credentials.txt
 
 ############################################################################################
 # Resume standard ansible.cfg defaults section below                                       #
