--- a/roles/ARA/tasks/main.yml
+++ b/roles/ARA/tasks/main.yml
@@ -7,9 +7,8 @@
 
 - name: Install ara pip packages
   pip:
-    name: "{{ item }}"
     state: present
-  with_items: "{{ ara_pip_packages }}"
+    name: "{{ ara_pip_packages }}"
   become: true 
   delegate_to: 127.0.0.1
 
