--- a/roles/ARA/tasks/main.yml
+++ b/roles/ARA/tasks/main.yml
@@ -13,7 +13,8 @@
   delegate_to: 127.0.0.1
 
 - name: Get ara location
-  command: python -c "import os,ara; print(os.path.dirname(ara.__file__))"
+  command: python -m ara.setup.path
+#  command: python -c "import os,ara; print(os.path.dirname(ara.__file__))"
   register: ara_location  
 
 - name: Create plugins folder in playbook directory if it doesn't exist
@@ -24,12 +25,12 @@
 
 - name: Copy ara callback plugin to openebs custom plugins location
   copy: 
-    src: "{{ ara_location.stdout }}/plugins/callbacks/log_ara.py"  
+    src: "{{ ara_location.stdout }}/plugins/callbacks/"  
     dest: "{{ playbook_dir }}/plugins/callback" 
 
 - name: Copy ara action plugins to openebs custom plugins location
   copy:
-    src: "{{ ara_location.stdout }}/plugins/actions"
+    src: "{{ ara_location.stdout }}/plugins/actions/"
     dest: "{{ playbook_dir }}/plugins"
 
 #- name: Copy ara modules to openebs custom plugins location
