--- a/roles/common/tasks/debian.yml
+++ b/roles/common/tasks/debian.yml
@@ -46,16 +46,6 @@
    - "{{ common_aptkeys }}"
  name: debian | add common apt keys
 
-#- 
-# apt_key: 
-#   state: present
-#   url: "https://download.sublimetext.com/sublimehq-pub.gpg"
-# name: debian | install key for sublime-text
-#- 
-# apt_key: 
-#   state: present
-#   url: "https://dl-ssl.google.com/linux/linux_signing_key.pub"
-# name: debian | install key for google-chrome
 - 
  apt_repository:
    repo: deb {{ item.repo }} {{ item.add }}
@@ -81,10 +71,8 @@
 -
   apt:
     state: latest
-    pkg: "{{ item }}"
+    pkg: "{{ common_packages }}"
     cache_valid_time: 43200
-  with_items:
-    - "{{ common_packages }}"
   name: debian | install CIDSE common packages
 
 ##########################################################################
@@ -111,8 +99,8 @@
 # This particular cron job will run every Monday at 00:30
 -
   cron:
-    minute: 30
-    weekday: 1
+    minute: "30"
+    weekday: "1"
     job: "purge-old-kernels --keep 3 -qy"
     state: present
     name: Weekly cleanup of old kernels
