--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,5 +5,6 @@
 - import_tasks: debian.yml
   when: ansible_os_family == "Debian"
 
-- import_tasks: redhat.yml
-  when: ansible_os_family == "RedHat"
+#- import_tasks: redhat.yml
+#  when: ansible_os_family == "RedHat"
+#
