--- a/roles/ARA/tasks/main.yml
+++ b/roles/ARA/tasks/main.yml
@@ -2,14 +2,14 @@
   apt:
     state: present
     name: "{{ ara_apt_packages }}"
-  become: true 
+# become: true 
   delegate_to: 127.0.0.1
 
 - name: Install ara pip packages
   pip:
     state: present
     name: "{{ ara_pip_packages }}"
-  become: true 
+#  become: true 
   delegate_to: 127.0.0.1
 
 - name: Get ara root dir location
