Fix ara vhost config generation

--- a/roles/ARA/defaults/main.yml
+++ b/roles/ARA/defaults/main.yml
@@ -15,3 +15,6 @@ ara_pip_packages:
 ara_apache_packages:
   - apache2
   - libapache2-mod-wsgi
+
+# Used in the ara vhost template
+ara_dns_suffix: "cidse.dhcp.asu.edu"
